[gd_scene load_steps=9 format=3 uid="uid://uwff1ssnabtx"]

[ext_resource type="Script" uid="uid://cvknx7swx61ss" path="res://scenes/game/main.gd" id="1_llaio"]
[ext_resource type="PackedScene" uid="uid://df0u1w33tqsat" path="res://UI/cronometro/cronometro.tscn" id="2_yd8kv"]
[ext_resource type="PackedScene" uid="uid://d3vn26aqpjq3s" path="res://numeros/aleatorios/numeros.tscn" id="3_uaf1y"]
[ext_resource type="PackedScene" uid="uid://buducm0a32y71" path="res://UI/Collisions/Collisions.tscn" id="4_iba00"]
[ext_resource type="PackedScene" uid="uid://dfelswph0i254" path="res://scenes/game/MoveSnake.tscn" id="4_uaf1y"]
[ext_resource type="PackedScene" uid="uid://cd8ssws6hjow1" path="res://scenes/game/pause.tscn" id="6_j7lav"]
[ext_resource type="PackedScene" uid="uid://bgmj4jxj8pt1t" path="res://scenes/game/head.tscn" id="7_g38uy"]
[ext_resource type="Script" uid="uid://bgpd3wi7n1crp" path="res://scenes/game/bounds.gd" id="8_5v64u"]

[node name="Main" type="Node2D"]
script = ExtResource("1_llaio")

[node name="Button" type="Button" parent="."]
offset_left = 448.0
offset_top = 349.0
offset_right = 574.0
offset_bottom = 391.0
text = "Come√ßar
"

[node name="Cronometro" parent="." instance=ExtResource("2_yd8kv")]
offset_left = 480.0
offset_top = 32.0
offset_right = 558.0
offset_bottom = 57.0

[node name="Label_pivo" type="Label" parent="."]
offset_left = 625.0
offset_top = 13.0
offset_right = 665.0
offset_bottom = 36.0

[node name="Numeros" parent="." instance=ExtResource("3_uaf1y")]
position = Vector2(3, 2)

[node name="Label_resultado" type="Label" parent="."]
offset_left = 430.0
offset_top = 8.0
offset_right = 470.0
offset_bottom = 31.0
metadata/_edit_use_anchors_ = true

[node name="Collisions" parent="." instance=ExtResource("4_iba00")]

[node name="UI_Pause" type="CanvasLayer" parent="."]

[node name="Pause" parent="UI_Pause" instance=ExtResource("6_j7lav")]
visible = false

[node name="Snake" parent="." instance=ExtResource("4_uaf1y")]
visible = false

[node name="TileMap" type="TileMap" parent="."]
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1441792, 4, 65535, 1441792, 5, 131071, 1441792, 6, 196607, 1441792, 7, 262143, 1441792, 8, 327679, 1441792, 9, 393215, 1441792, 10, 458751, 1441792, 11, 524287, 1441792, 12, 589823, 1441792, 13, 655359, 1441792, 14, 720895, 1441792, 15, 786431, 1441792, 16, 851967, 1441792, 17, 917503, 1441792, 18, 983039, 1441792, 19, 1048575, 1441792, 20, 1114111, 1441792, 21, 1179647, 1441792, 22, 1245183, 1441792, 23, 1310719, 1441792, 24, 1376255, 1441792, 25, -65536, 1507328, 4, 0, 1507328, 5, 65536, 1507328, 6, 131072, 1507328, 7, 196608, 1507328, 8, 262144, 1507328, 9, 327680, 1507328, 10, 393216, 1507328, 11, 458752, 1507328, 12, 524288, 1507328, 13, 589824, 1507328, 14, 655360, 1507328, 15, 720896, 1507328, 16, 786432, 1507328, 17, 851968, 1507328, 18, 917504, 1507328, 19, 983040, 1507328, 20, 1048576, 1507328, 21, 1114112, 1507328, 22, 1179648, 1507328, 23, 1245184, 1507328, 24, 1310720, 1507328, 25, -65535, 1572864, 4, 1, 1572864, 5, 65537, 1572864, 6, 131073, 1572864, 7, 196609, 1572864, 8, 262145, 1572864, 9, 327681, 1572864, 10, 393217, 1572864, 11, 458753, 1572864, 12, 524289, 1572864, 13, 589825, 1572864, 14, 655361, 1572864, 15, 720897, 1572864, 16, 786433, 1572864, 17, 851969, 1572864, 18, 917505, 1572864, 19, 983041, 1572864, 20, 1048577, 1572864, 21, 1114113, 1572864, 22, 1179649, 1572864, 23, 1245185, 1572864, 24, 1310721, 1572864, 25, -65534, 1638400, 4, 2, 1638400, 5, 65538, 1638400, 6, 131074, 1638400, 7, 196610, 1638400, 8, 262146, 1638400, 9, 327682, 1638400, 10, 393218, 1638400, 11, 458754, 1638400, 12, 524290, 1638400, 13, 589826, 1638400, 14, 655362, 1638400, 15, 720898, 1638400, 16, 786434, 1638400, 17, 851970, 1638400, 18, 917506, 1638400, 19, 983042, 1638400, 20, 1048578, 1638400, 21, 1114114, 1638400, 22, 1179650, 1638400, 23, 1245186, 1638400, 24, 1310722, 1638400, 25, -65533, 1703936, 4, 3, 1703936, 5, 65539, 1703936, 6, 131075, 1703936, 7, 196611, 1703936, 8, 262147, 1703936, 9, 327683, 1703936, 10, 393219, 1703936, 11, 458755, 1703936, 12, 524291, 1703936, 13, 589827, 1703936, 14, 655363, 1703936, 15, 720899, 1703936, 16, 786435, 1703936, 17, 851971, 1703936, 18, 917507, 1703936, 19, 983043, 1703936, 20, 1048579, 1703936, 21, 1114115, 1703936, 22, 1179651, 1703936, 23, 1245187, 1703936, 24, 1310723, 1703936, 25, -65532, 1769472, 4, 4, 1769472, 5, 65540, 1769472, 6, 131076, 1769472, 7, 196612, 1769472, 8, 262148, 1769472, 9, 327684, 1769472, 10, 393220, 1769472, 11, 458756, 1769472, 12, 524292, 1769472, 13, 589828, 1769472, 14, 655364, 1769472, 15, 720900, 1769472, 16, 786436, 1769472, 17, 851972, 1769472, 18, 917508, 1769472, 19, 983044, 1769472, 20, 1048580, 1769472, 21, 1114116, 1769472, 22, 1179652, 1769472, 23, 1245188, 1769472, 24, 1310724, 1769472, 25, -65531, 1835008, 4, 5, 1835008, 5, 65541, 1835008, 6, 131077, 1835008, 7, 196613, 1835008, 8, 262149, 1835008, 9, 327685, 1835008, 10, 393221, 1835008, 11, 458757, 1835008, 12, 524293, 1835008, 13, 589829, 1835008, 14, 655365, 1835008, 15, 720901, 1835008, 16, 786437, 1835008, 17, 851973, 1835008, 18, 917509, 1835008, 19, 983045, 1835008, 20, 1048581, 1835008, 21, 1114117, 1835008, 22, 1179653, 1835008, 23, 1245189, 1835008, 24, 1310725, 1835008, 25, -65530, 1900544, 4, 6, 1900544, 5, 65542, 1900544, 6, 131078, 1900544, 7, 196614, 1900544, 8, 262150, 1900544, 9, 327686, 1900544, 10, 393222, 1900544, 11, 458758, 1900544, 12, 524294, 1900544, 13, 589830, 1900544, 14, 655366, 1900544, 15, 720902, 1900544, 16, 786438, 1900544, 17, 851974, 1900544, 18, 917510, 1900544, 19, 983046, 1900544, 20, 1048582, 1900544, 21, 1114118, 1900544, 22, 1179654, 1900544, 23, 1245190, 1900544, 24, 1310726, 1900544, 25, -65529, 1966080, 4, 7, 1966080, 5, 65543, 1966080, 6, 131079, 1966080, 7, 196615, 1966080, 8, 262151, 1966080, 9, 327687, 1966080, 10, 393223, 1966080, 11, 458759, 1966080, 12, 524295, 1966080, 13, 589831, 1966080, 14, 655367, 1966080, 15, 720903, 1966080, 16, 786439, 1966080, 17, 851975, 1966080, 18, 917511, 1966080, 19, 983047, 1966080, 20, 1048583, 1966080, 21, 1114119, 1966080, 22, 1179655, 1966080, 23, 1245191, 1966080, 24, 1310727, 1966080, 25, -65528, 2031616, 4, 8, 2031616, 5, 65544, 2031616, 6, 131080, 2031616, 7, 196616, 2031616, 8, 262152, 2031616, 9, 327688, 2031616, 10, 393224, 2031616, 11, 458760, 2031616, 12, 524296, 2031616, 13, 589832, 2031616, 14, 655368, 2031616, 15, 720904, 2031616, 16, 786440, 2031616, 17, 851976, 2031616, 18, 917512, 2031616, 19, 983048, 2031616, 20, 1048584, 2031616, 21, 1114120, 2031616, 22, 1179656, 2031616, 23, 1245192, 2031616, 24, 1310728, 2031616, 25, -65527, 2097152, 4, 9, 2097152, 5, 65545, 2097152, 6, 131081, 2097152, 7, 196617, 2097152, 8, 262153, 2097152, 9, 327689, 2097152, 10, 393225, 2097152, 11, 458761, 2097152, 12, 524297, 2097152, 13, 589833, 2097152, 14, 655369, 2097152, 15, 720905, 2097152, 16, 786441, 2097152, 17, 851977, 2097152, 18, 917513, 2097152, 19, 983049, 2097152, 20, 1048585, 2097152, 21, 1114121, 2097152, 22, 1179657, 2097152, 23, 1245193, 2097152, 24, 1310729, 2097152, 25, -65526, 2162688, 4, 10, 2162688, 5, 65546, 2162688, 6, 131082, 2162688, 7, 196618, 2162688, 8, 262154, 2162688, 9, 327690, 2162688, 10, 393226, 2162688, 11, 458762, 2162688, 12, 524298, 2162688, 13, 589834, 2162688, 14, 655370, 2162688, 15, 720906, 2162688, 16, 786442, 2162688, 17, 851978, 2162688, 18, 917514, 2162688, 19, 983050, 2162688, 20, 1048586, 2162688, 21, 1114122, 2162688, 22, 1179658, 2162688, 23, 1245194, 2162688, 24, 1310730, 2162688, 25, -65525, 2228224, 4, 11, 2228224, 5, 65547, 2228224, 6, 131083, 2228224, 7, 196619, 2228224, 8, 262155, 2228224, 9, 327691, 2228224, 10, 393227, 2228224, 11, 458763, 2228224, 12, 524299, 2228224, 13, 589835, 2228224, 14, 655371, 2228224, 15, 720907, 2228224, 16, 786443, 2228224, 17, 851979, 2228224, 18, 917515, 2228224, 19, 983051, 2228224, 20, 1048587, 2228224, 21, 1114123, 2228224, 22, 1179659, 2228224, 23, 1245195, 2228224, 24, 1310731, 2228224, 25, -65524, 2293760, 4, 12, 2293760, 5, 65548, 2293760, 6, 131084, 2293760, 7, 196620, 2293760, 8, 262156, 2293760, 9, 327692, 2293760, 10, 393228, 2293760, 11, 458764, 2293760, 12, 524300, 2293760, 13, 589836, 2293760, 14, 655372, 2293760, 15, 720908, 2293760, 16, 786444, 2293760, 17, 851980, 2293760, 18, 917516, 2293760, 19, 983052, 2293760, 20, 1048588, 2293760, 21, 1114124, 2293760, 22, 1179660, 2293760, 23, 1245196, 2293760, 24, 1310732, 2293760, 25, -65523, 2359296, 4, 13, 2359296, 5, 65549, 2359296, 6, 131085, 2359296, 7, 196621, 2359296, 8, 262157, 2359296, 9, 327693, 2359296, 10, 393229, 2359296, 11, 458765, 2359296, 12, 524301, 2359296, 13, 589837, 2359296, 14, 655373, 2359296, 15, 720909, 2359296, 16, 786445, 2359296, 17, 851981, 2359296, 18, 917517, 2359296, 19, 983053, 2359296, 20, 1048589, 2359296, 21, 1114125, 2359296, 22, 1179661, 2359296, 23, 1245197, 2359296, 24, 1310733, 2359296, 25, -65522, 2424832, 4, 14, 2424832, 5, 65550, 2424832, 6, 131086, 2424832, 7, 196622, 2424832, 8, 262158, 2424832, 9, 327694, 2424832, 10, 393230, 2424832, 11, 458766, 2424832, 12, 524302, 2424832, 13, 589838, 2424832, 14, 655374, 2424832, 15, 720910, 2424832, 16, 786446, 2424832, 17, 851982, 2424832, 18, 917518, 2424832, 19, 983054, 2424832, 20, 1048590, 2424832, 21, 1114126, 2424832, 22, 1179662, 2424832, 23, 1245198, 2424832, 24, 1310734, 2424832, 25, -65521, 2490368, 4, 15, 2490368, 5, 65551, 2490368, 6, 131087, 2490368, 7, 196623, 2490368, 8, 262159, 2490368, 9, 327695, 2490368, 10, 393231, 2490368, 11, 458767, 2490368, 12, 524303, 2490368, 13, 589839, 2490368, 14, 655375, 2490368, 15, 720911, 2490368, 16, 786447, 2490368, 17, 851983, 2490368, 18, 917519, 2490368, 19, 983055, 2490368, 20, 1048591, 2490368, 21, 1114127, 2490368, 22, 1179663, 2490368, 23, 1245199, 2490368, 24, 1310735, 2490368, 25, -65520, 2555904, 4, 16, 2555904, 5, 65552, 2555904, 6, 131088, 2555904, 7, 196624, 2555904, 8, 262160, 2555904, 9, 327696, 2555904, 10, 393232, 2555904, 11, 458768, 2555904, 12, 524304, 2555904, 13, 589840, 2555904, 14, 655376, 2555904, 15, 720912, 2555904, 16, 786448, 2555904, 17, 851984, 2555904, 18, 917520, 2555904, 19, 983056, 2555904, 20, 1048592, 2555904, 21, 1114128, 2555904, 22, 1179664, 2555904, 23, 1245200, 2555904, 24, 1310736, 2555904, 25, -65519, 2621440, 4, 17, 2621440, 5, 65553, 2621440, 6, 131089, 2621440, 7, 196625, 2621440, 8, 262161, 2621440, 9, 327697, 2621440, 10, 393233, 2621440, 11, 458769, 2621440, 12, 524305, 2621440, 13, 589841, 2621440, 14, 655377, 2621440, 15, 720913, 2621440, 16, 786449, 2621440, 17, 851985, 2621440, 18, 917521, 2621440, 19, 983057, 2621440, 20, 1048593, 2621440, 21, 1114129, 2621440, 22, 1179665, 2621440, 23, 1245201, 2621440, 24, 1310737, 2621440, 25, -65518, 2686976, 4, 18, 2686976, 5, 65554, 2686976, 6, 131090, 2686976, 7, 196626, 2686976, 8, 262162, 2686976, 9, 327698, 2686976, 10, 393234, 2686976, 11, 458770, 2686976, 12, 524306, 2686976, 13, 589842, 2686976, 14, 655378, 2686976, 15, 720914, 2686976, 16, 786450, 2686976, 17, 851986, 2686976, 18, 917522, 2686976, 19, 983058, 2686976, 20, 1048594, 2686976, 21, 1114130, 2686976, 22, 1179666, 2686976, 23, 1245202, 2686976, 24, 1310738, 2686976, 25, -65517, 2752512, 4, 19, 2752512, 5, 65555, 2752512, 6, 131091, 2752512, 7, 196627, 2752512, 8, 262163, 2752512, 9, 327699, 2752512, 10, 393235, 2752512, 11, 458771, 2752512, 12, 524307, 2752512, 13, 589843, 2752512, 14, 655379, 2752512, 15, 720915, 2752512, 16, 786451, 2752512, 17, 851987, 2752512, 18, 917523, 2752512, 19, 983059, 2752512, 20, 1048595, 2752512, 21, 1114131, 2752512, 22, 1179667, 2752512, 23, 1245203, 2752512, 24, 1310739, 2752512, 25, -65516, 2818048, 4, 20, 2818048, 5, 65556, 2818048, 6, 131092, 2818048, 7, 196628, 2818048, 8, 262164, 2818048, 9, 327700, 2818048, 10, 393236, 2818048, 11, 458772, 2818048, 12, 524308, 2818048, 13, 589844, 2818048, 14, 655380, 2818048, 15, 720916, 2818048, 16, 786452, 2818048, 17, 851988, 2818048, 18, 917524, 2818048, 19, 983060, 2818048, 20, 1048596, 2818048, 21, 1114132, 2818048, 22, 1179668, 2818048, 23, 1245204, 2818048, 24, 1310740, 2818048, 25, -65515, 2883584, 4, 21, 2883584, 5, 65557, 2883584, 6, 131093, 2883584, 7, 196629, 2883584, 8, 262165, 2883584, 9, 327701, 2883584, 10, 393237, 2883584, 11, 458773, 2883584, 12, 524309, 2883584, 13, 589845, 2883584, 14, 655381, 2883584, 15, 720917, 2883584, 16, 786453, 2883584, 17, 851989, 2883584, 18, 917525, 2883584, 19, 983061, 2883584, 20, 1048597, 2883584, 21, 1114133, 2883584, 22, 1179669, 2883584, 23, 1245205, 2883584, 24, 1310741, 2883584, 25, -65514, 2949120, 4, 22, 2949120, 5, 65558, 2949120, 6, 131094, 2949120, 7, 196630, 2949120, 8, 262166, 2949120, 9, 327702, 2949120, 10, 393238, 2949120, 11, 458774, 2949120, 12, 524310, 2949120, 13, 589846, 2949120, 14, 655382, 2949120, 15, 720918, 2949120, 16, 786454, 2949120, 17, 851990, 2949120, 18, 917526, 2949120, 19, 983062, 2949120, 20, 1048598, 2949120, 21, 1114134, 2949120, 22, 1179670, 2949120, 23, 1245206, 2949120, 24, 1310742, 2949120, 25, -65513, 3014656, 4, 23, 3014656, 5, 65559, 3014656, 6, 131095, 3014656, 7, 196631, 3014656, 8, 262167, 3014656, 9, 327703, 3014656, 10, 393239, 3014656, 11, 458775, 3014656, 12, 524311, 3014656, 13, 589847, 3014656, 14, 655383, 3014656, 15, 720919, 3014656, 16, 786455, 3014656, 17, 851991, 3014656, 18, 917527, 3014656, 19, 983063, 3014656, 20, 1048599, 3014656, 21, 1114135, 3014656, 22, 1179671, 3014656, 23, 1245207, 3014656, 24, 1310743, 3014656, 25, -65512, 3080192, 4, 24, 3080192, 5, 65560, 3080192, 6, 131096, 3080192, 7, 196632, 3080192, 8, 262168, 3080192, 9, 327704, 3080192, 10, 393240, 3080192, 11, 458776, 3080192, 12, 524312, 3080192, 13, 589848, 3080192, 14, 655384, 3080192, 15, 720920, 3080192, 16, 786456, 3080192, 17, 851992, 3080192, 18, 917528, 3080192, 19, 983064, 3080192, 20, 1048600, 3080192, 21, 1114136, 3080192, 22, 1179672, 3080192, 23, 1245208, 3080192, 24, 1310744, 3080192, 25, -65511, 3145728, 4, 25, 3145728, 5, 65561, 3145728, 6, 131097, 3145728, 7, 196633, 3145728, 8, 262169, 3145728, 9, 327705, 3145728, 10, 393241, 3145728, 11, 458777, 3145728, 12, 524313, 3145728, 13, 589849, 3145728, 14, 655385, 3145728, 15, 720921, 3145728, 16, 786457, 3145728, 17, 851993, 3145728, 18, 917529, 3145728, 19, 983065, 3145728, 20, 1048601, 3145728, 21, 1114137, 3145728, 22, 1179673, 3145728, 23, 1245209, 3145728, 24, 1310745, 3145728, 25, -65510, 3211264, 4, 26, 3211264, 5, 65562, 3211264, 6, 131098, 3211264, 7, 196634, 3211264, 8, 262170, 3211264, 9, 327706, 3211264, 10, 393242, 3211264, 11, 458778, 3211264, 12, 524314, 3211264, 13, 589850, 3211264, 14, 655386, 3211264, 15, 720922, 3211264, 16, 786458, 3211264, 17, 851994, 3211264, 18, 917530, 3211264, 19, 983066, 3211264, 20, 1048602, 3211264, 21, 1114138, 3211264, 22, 1179674, 3211264, 23, 1245210, 3211264, 24, 1310746, 3211264, 25, -65509, 3276800, 4, 27, 3276800, 5, 65563, 3276800, 6, 131099, 3276800, 7, 196635, 3276800, 8, 262171, 3276800, 9, 327707, 3276800, 10, 393243, 3276800, 11, 458779, 3276800, 12, 524315, 3276800, 13, 589851, 3276800, 14, 655387, 3276800, 15, 720923, 3276800, 16, 786459, 3276800, 17, 851995, 3276800, 18, 917531, 3276800, 19, 983067, 3276800, 20, 1048603, 3276800, 21, 1114139, 3276800, 22, 1179675, 3276800, 23, 1245211, 3276800, 24, 1310747, 3276800, 25, -65508, 3342336, 4, 28, 3342336, 5, 65564, 3342336, 6, 131100, 3342336, 7, 196636, 3342336, 8, 262172, 3342336, 9, 327708, 3342336, 10, 393244, 3342336, 11, 458780, 3342336, 12, 524316, 3342336, 13, 589852, 3342336, 14, 655388, 3342336, 15, 720924, 3342336, 16, 786460, 3342336, 17, 851996, 3342336, 18, 917532, 3342336, 19, 983068, 3342336, 20, 1048604, 3342336, 21, 1114140, 3342336, 22, 1179676, 3342336, 23, 1245212, 3342336, 24, 1310748, 3342336, 25, -65507, 3407872, 4, 29, 3407872, 5, 65565, 3407872, 6, 131101, 3407872, 7, 196637, 3407872, 8, 262173, 3407872, 9, 327709, 3407872, 10, 393245, 3407872, 11, 458781, 3407872, 12, 524317, 3407872, 13, 589853, 3407872, 14, 655389, 3407872, 15, 720925, 3407872, 16, 786461, 3407872, 17, 851997, 3407872, 18, 917533, 3407872, 19, 983069, 3407872, 20, 1048605, 3407872, 21, 1114141, 3407872, 22, 1179677, 3407872, 23, 1245213, 3407872, 24, 1310749, 3407872, 25, -65506, 3473408, 4, 30, 3473408, 5, 65566, 3473408, 6, 131102, 3473408, 7, 196638, 3473408, 8, 262174, 3473408, 9, 327710, 3473408, 10, 393246, 3473408, 11, 458782, 3473408, 12, 524318, 3473408, 13, 589854, 3473408, 14, 655390, 3473408, 15, 720926, 3473408, 16, 786462, 3473408, 17, 851998, 3473408, 18, 917534, 3473408, 19, 983070, 3473408, 20, 1048606, 3473408, 21, 1114142, 3473408, 22, 1179678, 3473408, 23, 1245214, 3473408, 24, 1310750, 3473408, 25, -65505, 3538944, 4, 31, 3538944, 5, 65567, 3538944, 6, 131103, 3538944, 7, 196639, 3538944, 8, 262175, 3538944, 9, 327711, 3538944, 10, 393247, 3538944, 11, 458783, 3538944, 12, 524319, 3538944, 13, 589855, 3538944, 14, 655391, 3538944, 15, 720927, 3538944, 16, 786463, 3538944, 17, 851999, 3538944, 18, 917535, 3538944, 19, 983071, 3538944, 20, 1048607, 3538944, 21, 1114143, 3538944, 22, 1179679, 3538944, 23, 1245215, 3538944, 24, 1310751, 3538944, 25, -65504, 3604480, 4, 32, 3604480, 5, 65568, 3604480, 6, 131104, 3604480, 7, 196640, 3604480, 8, 262176, 3604480, 9, 327712, 3604480, 10, 393248, 3604480, 11, 458784, 3604480, 12, 524320, 3604480, 13, 589856, 3604480, 14, 655392, 3604480, 15, 720928, 3604480, 16, 786464, 3604480, 17, 852000, 3604480, 18, 917536, 3604480, 19, 983072, 3604480, 20, 1048608, 3604480, 21, 1114144, 3604480, 22, 1179680, 3604480, 23, 1245216, 3604480, 24, 1310752, 3604480, 25, -65503, 3670016, 4, 33, 3670016, 5, 65569, 3670016, 6, 131105, 3670016, 7, 196641, 3670016, 8, 262177, 3670016, 9, 327713, 3670016, 10, 393249, 3670016, 11, 458785, 3670016, 12, 524321, 3670016, 13, 589857, 3670016, 14, 655393, 3670016, 15, 720929, 3670016, 16, 786465, 3670016, 17, 852001, 3670016, 18, 917537, 3670016, 19, 983073, 3670016, 20, 1048609, 3670016, 21, 1114145, 3670016, 22, 1179681, 3670016, 23, 1245217, 3670016, 24, 1310753, 3670016, 25, -65502, 3735552, 4, 34, 3735552, 5, 65570, 3735552, 6, 131106, 3735552, 7, 196642, 3735552, 8, 262178, 3735552, 9, 327714, 3735552, 10, 393250, 3735552, 11, 458786, 3735552, 12, 524322, 3735552, 13, 589858, 3735552, 14, 655394, 3735552, 15, 720930, 3735552, 16, 786466, 3735552, 17, 852002, 3735552, 18, 917538, 3735552, 19, 983074, 3735552, 20, 1048610, 3735552, 21, 1114146, 3735552, 22, 1179682, 3735552, 23, 1245218, 3735552, 24, 1310754, 3735552, 25, -65501, 3801088, 4, 35, 3801088, 5, 65571, 3801088, 6, 131107, 3801088, 7, 196643, 3801088, 8, 262179, 3801088, 9, 327715, 3801088, 10, 393251, 3801088, 11, 458787, 3801088, 12, 524323, 3801088, 13, 589859, 3801088, 14, 655395, 3801088, 15, 720931, 3801088, 16, 786467, 3801088, 17, 852003, 3801088, 18, 917539, 3801088, 19, 983075, 3801088, 20, 1048611, 3801088, 21, 1114147, 3801088, 22, 1179683, 3801088, 23, 1245219, 3801088, 24, 1310755, 3801088, 25)

[node name="Head" parent="." instance=ExtResource("7_g38uy")]
unique_name_in_owner = true
position = Vector2(416, 224)

[node name="Bounds" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_5v64u")

[node name="UpperLeft" type="Marker2D" parent="Bounds"]
unique_name_in_owner = true

[node name="LowerRight" type="Marker2D" parent="Bounds"]
unique_name_in_owner = true
position = Vector2(960, 640)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="numero_clicado" from="Numeros" to="." method="_on_numeros_numero_clicado"]
